# RoboAchxy

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
bot/: __main__.py  _typeshack.py  core.py  options.py  utils.py
bot/cogs/: __init__.py  events.py  meta.py
bot/tools/: prefix.py
bot/tools/prefix/: _helpers.py  prefix.py
